Fixed error and made button alignment more appealing

--- a/app/assets/stylesheets/carts.scss
+++ b/app/assets/stylesheets/carts.scss
@@ -41,4 +41,7 @@
     input[type="submit"]:hover {
     background-color: #992;
     }
+    .actions .button_to {
+        display: inline-block;
+    }
 }
